Page MenuHome GnuPG

Card s/n number missing in gpgsm
Closed, ResolvedPublic

Description

For S/MIME keys on a smart card, the location of the secret key in the details is wrongly shown in kleopatra as "on this computer and on smart card" istead of "on smart card xyz"

C:\Users\g10code>gpgsm -K --with-colons test02
C:\Users\g10code\AppData\Roaming\gnupg\pubring.kbx
--------------------------------------------------
crs::256:18:3132922EA156C8BA:20231115T131344:20261115T235959:01DB112B73EBDF::CN=CA IVBB Deutsche Telekom AG 20,OU=Bund,O=PKI-1-Verwaltung,C=DE::eE:::::brainpoolP256r1:23:
fpr:::::::::87285EC2ABD22701562FA4793132922EA156C8BA:::209ACE2415113B80071D5FA3A1F717604F0E5ABB:
fp2:::::::::429D81F1CEA60988FDF3AEC81A46CE0F83ACFB308D4C67F82D4413B88A4427A6::::
grp:::::::::9807C934B87DCAB103D5E8A4D69C3CFB600F75DA:
uid:::::::::2.5.4.5=#32,CN=iOS Test-Smartcard iostest02.sc,OU=BSI,O=Bund,C=DE::
uid:::::::::<iostest02.sc@bsi.bund.de>::
crs::256:18:BC538356E99EEAFB:20231115T131344:20261115T235959:033FCAC33822::CN=CA IVBB Deutsche Telekom AG 20,OU=Bund,O=PKI-1-Verwaltung,C=DE::sS:::::brainpoolP256r1:23:
fpr:::::::::68D5DDDD1375F84579315FFBBC538356E99EEAFB:::209ACE2415113B80071D5FA3A1F717604F0E5ABB:
fp2:::::::::94DE6961B896BA8AC415138EABEB1213302AD2DE69CA3F6D4BCA7BA018F9A4BA::::
grp:::::::::4FE905D9AF633D134BB74109526CC762EC9BC8DC:
uid:::::::::2.5.4.5=#32,CN=iOS Test-Smartcard iostest02.sc,OU=BSI,O=Bund,C=DE::
uid:::::::::<iostest02.sc@bsi.bund.de>::

Details

Version
VSD 3.3.3-beta32

Event Timeline

ebo created this object with edit policy "Contributor (Project)".

This is caused by a bug in gpgsm. The card serial numbers are missing in the with-colon key listing.

Proposed fix: D616: gpgsm: Fix output of card serial numbers in colon listing

ikloecker mentioned this in Unknown Object (Maniphest Task).Nov 10 2025, 9:01 AM
werner renamed this task from Kleopatra: wrong info given for S/MIME secret key location on card to Card s/n number missing in gpgsm.Nov 14 2025, 12:38 PM
werner removed ikloecker as the assignee of this task.
werner updated the task description. (Show Details)
werner added a subscriber: ikloecker.
werner added projects: S/MIME, scd.
werner changed the task status from Open to Testing.Nov 16 2025, 7:10 PM
werner moved this task from Backlog to WIP on the gnupg26 board.
werner added a subscriber: werner.

Fix applied. Thanks.

werner moved this task from Backlog to WiP on the gnupg22 board.
ebo claimed this task.
ebo moved this task from QA to Done on the gnupg26 board.

in Gpg4win-5.0.0-beta479

Kleopatra shows the location for S/MIME keys on a smart card correctly now: