gpgsm: Fix output of card serial number in colon listing.

* sm/call-agent.c (keyinfo_status_cb): Set S back.
--

GnuPG-bug-id: 7914